--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,14 @@
     <header>
         <nav>
             <a href="planning_5kl.html">5 класс</a>
-            <a href="#grade6">6 класс</a>
-            <a href="#grade7">7 класс</a>
+            <a href="planning_6kl.html">6 класс</a>
+            <a href="planning_7kl.html">7 класс</a>
             <span id="auth-buttons">
-                <button id="btn-login">Войти</button>
+                <div class="user-info">
+                    <span class="user-icon">👤</span>
+                    <span class="user-name" id="welcome-username"></span>
+                </div>
+                <button id="btn-logout">Выйти</button>
                 <button id="btn-register">Зарегистрироваться</button>
                 <button id="btn-logout" style="display:none;">Выйти</button>
             </span>
