оишбка регистрации - не приходит письмо

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,15 +12,19 @@
             <a href="planning_5kl.html">5 класс</a>
             <a href="planning_6kl.html">6 класс</a>
             <a href="planning_7kl.html">7 класс</a>
-            <span id="auth-buttons">
-                <div class="user-info">
-                    <span class="user-icon">👤</span>
-                    <span class="user-name" id="welcome-username"></span>
-                </div>
-                <button id="btn-logout">Выйти</button>
-                <button id="btn-register">Зарегистрироваться</button>
-                <button id="btn-logout" style="display:none;">Выйти</button>
-            </span>
+        <span id="auth-buttons">
+            <div class="user-info" style="display:none;">
+                <span class="user-icon">👤</span>
+                <span class="user-name" id="welcome-username"></span>
+            </div>
+            <button id="btn-logout" style="display:none;">Выйти</button>
+            <button id="btn-register">Зарегистрироваться</button>
+            <button id="btn-login" style="margin-left:10px;">Войти</button>
+        </span>
+
+        <!-- Добавить ID для форм сообщений: -->
+        <p id="reg-message" style="margin-top:10px;"></p>
+        <p id="login-message" style="margin-top:10px;"></p>
         </nav>
     </header>
 
